# ndicts

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
data_dict/: index.html
docs/: data_dict.md  extra_methods.md  index.md  initializers.md  installation.md  nested_dict.md  quickstart.md  reference.md
extra_methods/: index.html
installation/: index.html
ndicts/: __init__.py  data_dict.py  ndicts.py  nested_dict.py
nested_dict/: index.html
quickstart/: index.html
tests/: test_datadict.py  test_nesteddict.py
tutorials/: DataDict_tutorial.ipynb  NestedDict_tutorial.ipynb
