[tool.poetry]
name = "ndicts"
version = "0.2.0"
description = "Class to handle nested dictionaries"
authors = ["Edoardo Cicirello <e.cicirello@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
jupyter = "^1.0.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = "^8.5.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
