[tool.poetry]
name = "ndicts"
version = "0.3.0"
description = "Class to handle nested dictionaries"
authors = ["Edoardo Cicirello <e.cicirello@protonmail.com>"]
readme = "README.md"
documentation = "https://edd313.github.io/ndicts/"
repository = "https://github.com/edd313/ndicts"
keywords = ["nested", "dictionary"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.1"}
mkdocs-material = "^8.5.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
